--- a/style.css
+++ b/style.css
@@ -86,3 +86,165 @@
   margin-right: 2px;
 }
 
+/* Comparison Site Formatting */
+
+.comp-box-set {
+  position: relative;
+  height: 500px;
+  width: 850px;
+  justify-content: center;
+  background: darkgray;
+  top: 15px;
+  left: 140px;
+}
+
+.comp-box-2 {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 0px;
+  margin-right: 5px;
+  margin-left: 0px;
+  top: 0px;
+  width:825px;
+  height: 480px;
+  /* justify-content: center;
+  vertical-align: auto; */
+}
+
+.comp-title_style {
+  background-color: white;
+  border-color: rgb(181, 182, 185);
+  color: rgb(47, 202, 150);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  padding: 0px;
+  text-align: left;
+  margin-top: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
+  margin-bottom: 100px;
+  width: 740px;
+}
+
+.comp-p {
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  font-style: italic;
+  font-weight: 500;
+  padding: 0px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+}
+
+.comp-img-fourplots{
+  position: relative;
+  width: 300px;
+  height: 180px;
+}
+
+.comp-img-R1C1{
+  top: 30px;
+  left: 80px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.comp-fig-R1C1 {
+  top: -170px;
+  left: 115px;
+  right: 0px;
+  bottom: 0px;
+  margin-left: 0px;
+}
+.comp-img-R1C2{
+  top: -186px;
+  left: 430px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.comp-fig-R1C2 {
+  top: -387px;
+  left: 490px;
+  right: 0px;
+  bottom: 0px;
+  margin-left: 0px;
+}
+
+.comp-img-R2C1{
+  top: -201px;
+  left: 80px;
+  right: 0px;
+  bottom: 0px;
+}
+.comp-fig-R2C1 {
+  top: -400px;
+  left: 148px;
+  right: 0px;
+  bottom: 0px;
+  margin-left: 0px;
+}
+
+.comp-img-R2C2{
+  top: -419px;
+  left: 435px;
+  right: 0px;
+  bottom: 0px;
+}
+
+.comp-fig-R2C2 {
+  top: -615px;
+  left: 490px;
+  right: 0px;
+  bottom: 0px;
+  margin-left: 0px;
+}
+figcaption {
+  caption-side: top;
+  color: rgb(47, 202, 150);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  font-style: italic;
+  position: relative;
+}
+
+/* Table Formatting Below */
+
+.table_p {
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  font-style: italic;
+  padding: 5px;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 5px;
+}
+
+table {
+  /* table-layout: fixed; */
+  margin-left: 15px;
+  margin-top: 10px;
+}
+
+td {
+  padding: 5px;
+  width: 40px;
+  overflow: hidden;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+
+th {
+  text-align: left;
+  padding: 0px;
+  vertical-align: bottom;
+  width: 40px;
+  overflow: hidden;
+}
