--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+/* Index Styles */
+
 .box-set {
   position: relative;
   height: 500px;
-  background: darkgray;
+  background: gray;
   top: 15px;
 }
 
@@ -214,7 +216,7 @@ figcaption {
   position: relative;
 }
 
-/* Table Formatting Below */
+/* Data Table Styles */
 
 .table_p {
   background-color: white;
@@ -247,4 +249,69 @@ th {
   vertical-align: bottom;
   width: 40px;
   overflow: hidden;
+}
+
+/* Navbar Styles */
+
+#p-text{
+  background-color: rgb(47, 202, 150);
+  border-color:  white;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  padding: 2px;
+  text-align: left;
+  margin-top: 0px;
+  margin-right: 0px;
+  margin-left: 94px;
+  margin-bottom: 0px;
+  width: 50px;
+  height: 30px;
+}
+
+@media (max-width: 600px) {
+  .box-set {
+    position: relative;
+    background: white;
+    height: 100%;
+    top: 0px;
+  }
+  
+  .box-1 {
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    width: 100%;
+    height: 50%;
+  }
+  .box-2 {
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+    width:  100%;
+    height: 50%;
+  }
+  #p-text {
+    background-color: rgb(47, 202, 150);
+    border-color:  white;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    font-style: italic;
+    padding: 2px;
+    text-align: left;
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-left: 94px;
+    margin-bottom: 0px;
+    width: 100%;
+  }
+
 }
