--- a/style1.css
+++ b/style1.css
@@ -1,29 +1,18 @@
 /* Comparison Site Formatting */
 
-.comp-box-set {
-  position: relative;
-  /* width: 75%;
-  height:100%; */
-  justify-content: center;
-  background: darkgray;
+/* Navigation Bar */
+
+nav {
+padding-bottom: 0rem;
 }
 
-.comp-col {
-  position: relative;
-  background: white;
-  margin-top: 1px;
-  margin-bottom: 0px;
-  margin-right: 1px;
-  margin-left: 0px;
-  top: 0px;
-  padding: 5px;
-  width: auto;
-  /* width:100%; */
-  /* height: 100%; */ 
-  /* justify-content: center;
-  vertical-align: auto; */
+nav a:hover{
+  background:rgb(47, 202, 150);
+  color: white;
 }
- 
+
+/* Header Text */
+
 .comp-title_style {
   background-color: white;
   border-color: rgb(181, 182, 185);
@@ -32,115 +21,85 @@
   font-size: 20px;
   font-weight: bold;
   font-style: italic;
-  padding: 0px;
-  text-align: left;
-  margin-top: 1px;
-  margin-right: 1px;
-  margin-left: 0px;
-  margin-bottom: 0px;
-  width: 100%;
+  padding: 1px;
+  margin-left: 15px;
 }
 
 .comp-p {
   background-color: white;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 11px;
+  font-size: 12px;
   font-style: italic;
-  font-weight: 500;
+  font-weight: 700;
   padding: 0px;
+  border: 0px;
   margin-top: 0px;
   margin-right: 0px;
   margin-left: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 1px;
 }
 
-.comp-img-fourplots{
+/* Container */
+
+.comp-container {
   position: relative;
-  width: 100%;
-  text-align: center;
-  float: left;
-  margin-top: 20px;
-  top: 0px;
+  justify-content: center;
+  background: darkgray;
+  height: auto;
+  /* overflow: hidden; */
+  display: flex;
+  /* margin */
 }
 
-.comp-img-R1C1{
-  width: 40%;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  float: left;
-}
+/* Row */
 
-.comp-fig-R1C1 {
-  position: absolute;
-  top: -20px;
-  left: 0px;
-  right: 360px;
-  bottom: 0px;
-  float: left;
-  margin-right: 1px;
-}
-.comp-img-R1C2{
-  width: 40%;
-  top: -500px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  float: right;
-}
-
-.comp-fig-R1C2 {
-  position: absolute;
-  top: -20px;
-  left: 400px;
-  right: 0px;
-  bottom: 0px;
-  margin-left: 0px;
-  float: left;
-}
-
-.comp-img-R2C1{
-  width: 50%;
-  top: -400px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  float: left;
-}
-.comp-fig-R2C1 {
+.comp-row {
   position: relative;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  margin-left: 0px;
-  float: left;
+  justify-content: center;
+  background: darkgrey;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  top: 5px;
+  bottom: 5px;
+  display: flex;
 }
 
-.comp-img-R2C2{
-  width: 50%;
+/* Columns */
+
+.comp-col {
+  position: relative;
+  background: white;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-left: 2px;
+  margin-right: 2px;
   top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  float: right;
+  padding: 5px;
+  width: 45%;
+  justify-content: center;
+  display: flex;
 }
 
-.comp-fig-R2C2 {
-  width: 50%;
-  top: 0px;
-  left: 0px;
-  right: 0px;
-  bottom: 0px;
-  margin-left: 0px;
-  float: right;
+/* Figure Boxes and Images */
+
+figure {
+  margin: 5px;
+  justify-content: center;
+  background: white;
+  width: auto;
+  display: table;
 }
 
+figure img {
+  width:100%;
+  justify-content: center;
+}
 
 figcaption {
-  /* display: table-caption; */
+  display: table-caption;
   position: relative;
   caption-side: top;
   color: rgb(47, 202, 150);
@@ -149,42 +108,73 @@ figcaption {
   font-weight: bold;
   font-style: italic;
   top: 0px;
-  float: left;
-  /* z-index: 1; */
-  /* display: inline-block; */
+  /* display: flex; */
+  justify-content: center;
+  text-align: center;
 }
 
-
-/* Navbar Styles */
-
-#p-text{
-  background-color: rgb(47, 202, 150);
-  border-color:  white;
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  font-style: italic;
-  padding: 2px;
-  text-align: left;
-  margin-top: 0px;
-  margin-right: 0px;
-  margin-left: 94px;
-  margin-bottom: 0px;
-  display: flex;
-  overflow: hidden;
-  width: 90px;
-  height: 35px;
+.comp-img-fourplots{
+  position: relative;
+  width: 75%;
+  text-align: center;
+  display:flex;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
-nav a:hover{
-  background:rgb(47, 202, 150);
-  color: white;
-}
+/* Media  */
+
+@media (max-width: 1100px) {
+
+  figure {
+    width: 90%;
+  }
+
+  figure img {
+    width: auto;
+  }
+
+  .comp-row {
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  .comp-col {
+    width: 75%;
+  }
+
+  .comp-container {
+    position: relative;
+    width: auto;
+  }
 
 @media (max-width: 600px) {
-    .column {
-        width: 100%;
-      }
 
+  figure {
+    width: 100%;
+  }
+
+  figure img {
+    width: auto;
+  }
+
+  .comp-row {
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  .comp-col {
+    width: 100%;
+  }
+
+  .comp-container {
+    position: relative;
+    width: 100%;
+  }
+  
 }
