--- a/style.css
+++ b/style.css
@@ -1,40 +1,18 @@
 
-/* Index Styles */
-
-.box-set {
-  position: relative;
-  background: gray;
-  top: 15px;
-  width: 100%
+/* Navbar */
+nav a:hover{
+  background:rgb(47, 202, 150);
+  color: white;
 }
 
-.box-1 {
-  position: relative;
-  margin-top: 10px;
-  margin-bottom: 20px;
+#brand-text {
+  font-size: 15px;
+  color: rgb(47, 202, 150);
+  font-weight: bold;
+  margin-left: 15px;
 }
 
-.box-2 {
-  position: relative;
-  margin-top: 10px;
-  margin-bottom: 20px;
- 
-}
-
-.img-fourplots{
-  position: relative;
-  width: 50%;
-  display:inline;
-  margin-left: auto;
-  margin-right: auto;
-  float:left;
-}
-
-.four-images {
-  position: relative;
-  display: inline;
-  width: 100%;
-}
+/* Header */
 
 .title_style {
   background-color: white;
@@ -51,6 +29,23 @@
   margin-left: 10px;
 }
 
+/* Row Settings */
+
+.box-set {
+  position: relative;
+  background: gray;
+  top: 15px;
+  width: 100%
+}
+
+/* Column Settings */
+
+.box-1 {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
 .card p{
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
@@ -63,6 +58,29 @@
   margin-top: 0px;
   height: 170px;
   margin-right: 2px;
+}
+
+.box-2 {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+/* Four Plots for 2nd Card */
+
+.img-fourplots{
+  position: relative;
+  width: 50%;
+  display:inline;
+  margin-left: auto;
+  margin-right: auto;
+  float:left;
+}
+
+.four-images {
+  position: relative;
+  display: inline;
+  width: 100%;
 }
 
 /* Data Table Styles */
@@ -98,11 +116,6 @@ th {
   vertical-align: bottom;
   width: 40px;
   overflow: hidden;
-}
-
-nav a:hover{
-  background:rgb(47, 202, 150);
-  color: white;
 }
 
 @media (max-width: 768px) {
